--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Modüler AI Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
         :root {
-            --bg-dark: #0f172a;
-            --glass: rgba(30, 41, 59, 0.7);
+            --bg-dark: #020617;
+            --glass: rgba(15, 23, 42, 0.7);
         }
         body {
             font-family: 'Inter', sans-serif;
@@ -18,24 +19,28 @@
             color: #f8fafc;
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
+            overflow: hidden;
             -webkit-tap-highlight-color: transparent;
+            height: 100vh;
+            height: -webkit-fill-available;
         }
         .glass-panel {
             background: var(--glass);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
         }
-        /* Dokunmatik cihazlar için kaydırma çubuğu iyileştirmesi */
         ::-webkit-scrollbar {
             width: 4px;
         }
         ::-webkit-scrollbar-track {
-            background: #1e293b;
+            background: transparent;
         }
         ::-webkit-scrollbar-thumb {
-            background: #475569;
+            background: #1e293b;
             border-radius: 10px;
+        }
+        input, textarea {
+            font-size: 16px !important; /* iOS zoom engelleme */
         }
     </style>
 <script type="importmap">
